--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "create-env": "printenv > .env"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
