--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
     "node-fetch": "^2.6.0",
-    "request": "^2.88.2",
     "nodemon": "^2.0.3",
+    "request": "^2.88.2",
     "superagent": "^5.2.2"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
